# load-env-vars-at-startup

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.py
app/: config.py  main.py
load_env_vars_at_startup/: __main__.py  _codemod.py  _templates.py  main.py
tests/: test_codemod.py  test_smoke.py
