[build-system]
requires = ["hatchling"]
build-backend = 'hatchling.build'

[project]
name = "load-env-vars-at-startup"
version = "0.1.0"
description = "Codemod to load environment variables at startup. ðŸ“"
readme = "README.md"
authors = [
    { name = "Marcelo Trylesinski", email = "marcelotryle@email.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
license = "MIT"
requires-python = ">=3.7"
dependencies = [
    "libcst>=0.4.7<0.5.0",
    "typer>=0.6.1<0.7.0",
    "jinja2>=3.1.2<4.0.0",
]
optional-dependencies = {}

[project.scripts]
levas = "load_env_vars_at_startup.main:app"

[project.urls]
Homepage = "https://github.com/Kludex/load-env-vars-at-startup"
Source = "https://github.com/Kludex/load-env-vars-at-startup"
Twitter = "https://twitter.com/marcelotryle"
Funding = 'https://github.com/sponsors/Kludex'

[tool.mypy]
strict = true
show_error_codes = true

[tool.flake8]
statistics = true
max-line-length = 88
ignore = ["E203", "E501", "W503"]
per-file-ignores = ["__init__.py:F401"]

[tool.black]
target-version = ["py310"]

[tool.isort]
profile = "black"
combine_as_imports = true

[tool.pytest.ini_options]
addopts = ["--strict-config", "--strict-markers"]
filterwarnings = ["error"]

[tool.coverage.run]
branch = true
parallel = true
source_pkgs = ["load_env_vars_at_startup", "tests"]

[tool.coverage.report]
show_missing = true
skip_covered = true
